--- a/style.css
+++ b/style.css
@@ -6,14 +6,19 @@
       opacity: 0;
       position: absolute;
       z-index: -1;
-      transition: transform 0.5s; 
+      transition: transform 0.5s;
     }
     #start {
       font-size: 24px;
       padding: 10px;
       border-radius: 10px;
-      box-shadow: 0 0 10px black; 
+      box-shadow: 0 0 10px black;
     }
     #start:hover {
-      transform: scale(1.1); 
+      transform: scale(1.1);
+    }
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
